* the check for 1.0->1.1 was the wrong way around. asw kept appearing.    Fixed.

--- a/utils/fpcm/fpcmake.ini
+++ b/utils/fpcm/fpcmake.ini
@@ -981,11 +981,11 @@ ASNAME=$(BINUTILSPREFIX)as
 LDNAME=$(BINUTILSPREFIX)ld
 ARNAME=$(BINUTILSPREFIX)ar
 RCNAME=$(BINUTILSPREFIX)rc
-ifeq ($(findstring 1.0.,$(FPC_VERSION)),)
+ifneq ($(findstring 1.0.,$(FPC_VERSION)),)
 ifeq ($(OS_TARGET),win32)
-ASNAME=asw
-LDNAME=ldw
-ARNAME=arw
+ASNAME=as
+LDNAME=ld
+ARNAME=ar
 endif
 endif
 
