--- a/tests/Makefile.fpc
+++ b/tests/Makefile.fpc
@@ -90,7 +90,7 @@ DBDIGEST=./dbdigest$(EXEEXT)
 DIGESTDEP+=$(DBDIGEST)
 
 $(DBDIGEST) : units utils/dbdigest.pp utils/teststr.pp utils/testu.pp utils/dbtests.pp
-        $(FPC) -n -Fuunits -Fu../packages/base/mysql -FE. utils/dbdigest.pp
+        $(FPC) -n -Fuunits -Fu../packages/base/mysql -FE. utils/dbdigest.pp -al
 endif
 endif
 
@@ -235,7 +235,7 @@ distclean: clean
 rundigest : $(DIGESTDEP)
         -$(DIGEST)
 ifeq ($(USESQL),YES)
-        -$(DBDIGEST) -v $(DIGESTVER) -o $(OS_TARGET) -c $(CPU_TARGET)
+        -$(DBDIGEST) -v $(DIGESTVER) -o $(OS_TARGET) -c $(CPU_TARGET) $(DBDIGESTOPT)
 endif
 
 all : allexectests
