* new locations for cross-compiler binaries

--- a/compiler/Makefile.fpc
+++ b/compiler/Makefile.fpc
@@ -516,6 +516,22 @@ htmldocs:
 MSGINSTALLDIR=$(INSTALL_BASEDIR)/msg
 override PPEXEFILE:=$(wildcard $(EXENAME))
 
+ifdef UNIXINSTALLDIR
+ifdef CROSSCOMPILE
+PPCCPULOCATION= $(INSTALL_BINDIR)
+PPCCROSSLOCATION=$(INSTALL_BASEDIR)/cross/$(FULL_TARGET)
+else
+PPCCPULOCATION= $(INSTALL_BASEDIR)
+endif
+else
+ifdef CROSSCOMPILE
+PPCCPULOCATION= $(INSTALL_BINDIR)
+PPCCROSSLOCATION=$(INSTALL_BINDIR)/cross/$(FULL_TARGET)
+else
+PPCCPULOCATION=  $(INSTALL_BINDIR)
+endif
+endif
+
 # This will only install the ppc386.exe, not the message files etc.
 quickinstall: $(addsuffix _install,$(TARGET_DIRS))
 # Install ppc386.exe
@@ -523,12 +539,13 @@ ifneq ($(PPEXEFILE),)
 ifdef UPXPROG
         -$(UPXPROG) $(EXENAME)
 endif
-ifdef UNIXINSTALLDIR
-        $(MKDIR) $(INSTALL_BASEDIR)
-        $(INSTALLEXE) $(EXENAME) $(INSTALL_BASEDIR)
-else
-        $(MKDIR) $(INSTALL_BINDIR)
-        $(INSTALLEXE) $(EXENAME) $(INSTALL_BINDIR)
+        $(MKDIR) $(PPCCPULOCATION)
+        $(INSTALLEXE) $(EXENAME) $(PPCCPULOCATION)
+ifdef CROSSCOMPILE
+	$(MKDIR) $(PPCCROSSLOCATION)
+	$(ECHO) $(PPCROSSNAME)
+	$(ECHO $(PPCCROSSLOCATION)
+	$(INSTALLEXE) $(PPCROSSNAME) $(PPCCROSSLOCATION)
 endif
 endif
 
