* Wiktor Sywula: platform extensions updated

--- a/utils/fpcm/fpcmake.ini
+++ b/utils/fpcm/fpcmake.ini
@@ -684,8 +684,11 @@ endif
 # watcom
 ifeq ($(OS_TARGET),watcom)
 STATICLIBPREFIX=
-FPCMADE=fpcmade.dos
-ZIPSUFFIX=watcom
+FPCMADE=fpcmade.wat
+ZIPSUFFIX=watc
+OEXT=.obj
+ASMEXT=.asm
+SHAREDLIBEXT=.dll
 endif
 
 # Linux
