* netbd added to shortname

--- a/Makefile.fpc
+++ b/Makefile.fpc
@@ -527,6 +527,7 @@ renametoshort:
         -mv upaszlib$(ZIPSUFFIX).zip upzl$(ZIPSUFFIX).zip
         -mv uuncgi$(ZIPSUFFIX).zip ucgi$(ZIPSUFFIX).zip
         -mv uunzip$(ZIPSUFFIX).zip uzip$(ZIPSUFFIX).zip
+        -mv unetdb$(ZIPSUFFIX).zip undb$(ZIPSUFFIX).zip
         -mv uftpapi$(ZIPSUFFIX).zip uftp$(ZIPSUFFIX).zip
         -mv uhwvideo$(ZIPSUFFIX).zip uhwv$(ZIPSUFFIX).zip
 
