* replace \ with / in path to make.exe

--- a/utils/fpcm/fpcmake.ini
+++ b/utils/fpcm/fpcmake.ini
@@ -24,7 +24,7 @@ else
 SEARCHPATH:=$(subst ;, ,$(PATH))
 endif
 # Add path were make is located
-SEARCHPATH+=$(patsubst %/,%,$(dir $(MAKE)))
+SEARCHPATH+=$(patsubst %/,%,$(subst \,/,$(dir $(MAKE))))
 
 # Search for PWD and determine also if we are under linux
 PWD:=$(strip $(wildcard $(addsuffix /pwd.exe,$(SEARCHPATH))))
