* peter told me to fix this

--- a/utils/fpdoc/Makefile.fpc
+++ b/utils/fpdoc/Makefile.fpc
@@ -26,7 +26,7 @@ fpcpackage=y
 fpcdir=../..
 
 [clean]
-units=dglobals dwriter dw_xml sh_pas dw_html dw_latex
+units=dglobals dwriter dw_xml sh_pas dw_html dw_latex dw_ipf
 files=dwriter.rst fpdoc.rst dglobals.rst makeskel.rst
 
 [rules]
