--- a/tests/units/Makefile.fpc
+++ b/tests/units/Makefile.fpc
@@ -14,10 +14,16 @@ fpcdir=../..
 
 
 [rules]
-.PHONY: rtl fcl clean
+
+# Only 1.1 has Classes in the RTL
+ifeq ($(findstring 1.0.,$(FPC_VERSION)),)
+FCL=fcl
+endif
 
 DUMMYINSTALLDIR=$(BASEDIR)/tmp
 INSTALLOPT=INSTALL_PREFIX=$(DUMMYINSTALLDIR) INSTALL_UNITDIR=$(BASEDIR)
+
+.PHONY: rtl clean $(FCL)
 
 ifndef USEUNITDIR
 
@@ -25,15 +31,17 @@ rtl:
         $(MAKE) -C ../../rtl all "OPT=$(OPT) -n"
         $(MAKE) -C ../../rtl install $(INSTALLOPT)
 
+ifdef FCL
 fcl:
-	$(MAKE) -C ../../packages/base all "OPT=$(OPT) -n"
+        $(MAKE) -C ../../packages/base all "OPT=$(OPT) -n"
         $(MAKE) -C ../../fcl all "OPT=$(OPT) -n"
         $(MAKE) -C ../../fcl install $(INSTALLOPT)
+endif
 
 clean : cleanall
 #        $(MAKE) -C ../../rtl clean
 #        $(MAKE) -C ../../fcl clean
-	$(DELTREE) $(DUMMYINSTALLDIR)
+        $(DELTREE) $(DUMMYINSTALLDIR)
 
 else
 
@@ -41,14 +49,13 @@ rtl:
         $(COPY) $(USEUNITDIR)/* .
         $(ECHO) Copied > $(FPCMADE)
 
+ifdef FCL
 fcl: rtl
+endif
 
 clean : cleanall
-	$(DELTREE) $(DUMMYINSTALLDIR)
+        $(DELTREE) $(DUMMYINSTALLDIR)
 
 endif
 
-
-
-erroru$(PPUEXT): erroru.pp rtl fcl
-
+erroru$(PPUEXT): erroru.pp rtl $(FCL)
