--- a/Makefile.fpc
+++ b/Makefile.fpc
@@ -4,7 +4,7 @@
 
 [package]
 name=fpc
-version=1.1.0-1
+version=1.9.0
 
 [target]
 dirs=compiler rtl utils fcl fv packages ide installer
@@ -592,9 +592,9 @@ ifneq ($(wildcard $(CVSINSTALL)/fpc.spec),)
 RPMFPCVERSION:=$(shell grep '^Version:' $(CVSINSTALL)/fpc.spec | awk '{ print $$2 }')
 
 # Only the recent rpms have rpmbuild
-RPMBUILD=$(shell which rpmbuild)
+RPMBUILD=$(strip $(wildcard $(addsuffix /rpmbuild,$(SEARCHPATH))))
 ifeq ($(RPMBUILD),)
-RPMBUILD=rpm
+RPMBUILD=$(strip $(wildcard $(addsuffix /rpm,$(SEARCHPATH))))
 endif
 REDHATDIR=/usr/src/redhat
 # Debian has /usr/src/rpm
@@ -612,7 +612,7 @@ rpmcopy: distclean
         rm -rf $(RPMSRCDIR)
         cp $(CVSINSTALL)/fpc.spec $(RPMSPECDIR)/fpc-$(RPMFPCVERSION).spec
 ifndef NODOCS
- 	cat $(CVSINSTALL)/fpcdoc.spec >> $(RPMSPECDIR)/fpc-$(RPMFPCVERSION).spec
+        cat $(CVSINSTALL)/fpcdoc.spec >> $(RPMSPECDIR)/fpc-$(RPMFPCVERSION).spec
 endif
         install -d $(RPMSRCDIR)
         $(COPYTREE) compiler $(RPMSRCDIR)
@@ -625,8 +625,8 @@ endif
         $(COPYTREE) Makefile* $(RPMSRCDIR)
         $(COPYTREE) $(CVSINSTALL)/man $(RPMSRCDIR)
         $(COPYTREE) $(CVSINSTALL)/doc $(RPMSRCDIR)
-	$(COPY) $(CVSINSTALL)/smart_strip.sh $(RPMSRCDIR)
-	chmod +x $(RPMSRCDIR)/smart_strip.sh
+        $(COPY) $(CVSINSTALL)/smart_strip.sh $(RPMSRCDIR)
+        chmod +x $(RPMSRCDIR)/smart_strip.sh
 ifndef NODOCS
         $(COPYTREE) docs $(RPMSRCDIR)
 endif
