*  added to dbdigest line

--- a/tests/Makefile.fpc
+++ b/tests/Makefile.fpc
@@ -90,7 +90,7 @@ DBDIGEST=./dbdigest$(EXEEXT)
 DIGESTDEP+=$(DBDIGEST)
 
 $(DBDIGEST) : units utils/dbdigest.pp utils/teststr.pp utils/testu.pp utils/dbtests.pp
-        $(FPC) -n -Fuunits -Fu../packages/base/mysql -FE. utils/dbdigest.pp
+        $(FPC) -n $(OPT) -Fuunits -Fu../packages/base/mysql -FE. utils/dbdigest.pp
 endif
 endif
 
