--- a/fcl/image/Makefile.fpc
+++ b/fcl/image/Makefile.fpc
@@ -11,7 +11,8 @@ packages=paszlib
 [target]
 units=fpimgcmn fpimage pngcomn fpreadpng fpwritepng fpreadxpm fpwritexpm \
       clipping fpcanvas pixtools fppixlcanv fpimgcanv pscanvas fpwritebmp \
-      fpreadbmp bmpcomn fpreadpnm fpwritepnm
+      fpreadbmp bmpcomn fpreadpnm fpwritepnm freetypeh freetype ftfont \
+      ellipses
 rsts=pscanvas      
 examples=imgconv
 
