--- a/packages/base/Makefile.fpc
+++ b/packages/base/Makefile.fpc
@@ -13,7 +13,7 @@ dirs_netbsd=inet gdbint libasync \
 dirs_openbsd=inet gdbint libasync \
             mysql ibase postgres oracle odbc 
 dirs_freebsd=inet gdbint libasync \
-             mysql ibase postgres oracle odbc 
+             mysql ibase postgres oracle odbc sqlite pthreads
 
 [install]
 fpcpackage=y
