* termio moved to better spot

--- a/rtl/linux/Makefile.fpc
+++ b/rtl/linux/Makefile.fpc
@@ -7,9 +7,9 @@ main=rtl
 
 [target]
 loaders=prt0 dllprt0 cprt0 gprt0 cprt21 gprt21
-units=$(SYSTEMUNIT) baseunix strings systhrds termio objpas syscall unixutil \
+units=$(SYSTEMUNIT) baseunix strings systhrds  objpas syscall unixutil \
       heaptrc lineinfo \
-      $(LINUXUNIT1) unix $(LINUXUNIT2) initc $(CPU_UNITS) \
+      $(LINUXUNIT1) termio unix $(LINUXUNIT2) initc $(CPU_UNITS) \
       dos crt objects printer ggigraph \
       sysutils typinfo math varutils \
       charset ucomplex getopts \
