--- a/fcl/net/Makefile.fpc
+++ b/fcl/net/Makefile.fpc
@@ -7,18 +7,18 @@ main=fcl
 
 [target]
 units=servlets
-units_linux=http httpsvlt xmlrpc
-units_freebsd=http httpsvlt xmlrpc
-units_netbsd=http httpsvlt xmlrpc
-units_openbsd=http httpsvlt xmlrpc
+units_linux=fpsock http httpsvlt xmlrpc
+units_freebsd=fpsock http httpsvlt xmlrpc
+units_netbsd=fpsock http httpsvlt xmlrpc
+units_openbsd=fpsock http httpsvlt xmlrpc
 programs_linux=mkxmlrpc
 programs_freebsd=mkxmlrpc
 programs_netbsd=mkxmlrpc
 programs_openbsd=mkxmlrpc
-rsts_linux=httpsvlt mkxmlrpc
-rsts_freebsd=httpsvlt mkxmlrpc
-rsts_netbsd=httpsvlt mkxmlrpc
-rsts_openbsd=httpsvlt mkxmlrpc
+rsts_linux=fpsock httpsvlt mkxmlrpc
+rsts_freebsd=fpsock httpsvlt mkxmlrpc
+rsts_netbsd=fpsock httpsvlt mkxmlrpc
+rsts_openbsd=fpsock httpsvlt mkxmlrpc
 exampledirs_linux=tests
 exampledirs_freebsd=tests
 exampledirs_netbsd=tests
